--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
   <head>
-    <title>Sample App</title>
+    <meta charset="UTF-8">
+    <title>React Sandbox</title>
   </head>
   <body>
-    <div id='root'>
-    </div>
+    <div id="app"></div>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
