--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
     <div id="app"></div>
+    <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="/static/bundle.js"></script>
   </body>
 </html>
